--- a/joint_control/learn_posture.ipynb
+++ b/joint_control/learn_posture.ipynb
@@ -37,24 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: pylab import has clobbered these variables: ['clf', 'permutation']\n",
-      "`%matplotlib` prevents importing * from pylab and numpy\n"
      ]
     }
    ],
@@ -70,16 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Frog', 'HeadBack', 'Left', 'Knee', 'Crouch', 'Back', 'Belly', 'Right', 'Sit', 'Stand', 'StandInit']\n"
+      "['Right', 'Back', 'Stand', 'Belly', 'HeadBack', 'Sit', 'Knee', 'Left', 'Frog', 'Crouch', 'StandInit']\n"
      ]
     }
    ],
@@ -90,10 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def load_pose_data(i):\n",
@@ -110,16 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total number of data 200\n"
+      "total number of data 222\n"
      ]
     }
    ],
@@ -127,17 +111,19 @@
     "# load all the data\n",
     "all_data = []\n",
     "all_target = []\n",
-    "# YOUR CODE HERE\n",
+    "\n",
+    "for i in range(len(classes)):\n",
+    "    d,t = load_pose_data(i)\n",
+    "    all_data.extend(d)\n",
+    "    all_target.extend(t)\n",
     "\n",
     "print 'total number of data', len(all_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# shuffule data\n",
@@ -157,10 +143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "clf = svm.SVC(gamma=0.001, C=100.)"
@@ -175,26 +159,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SVC(C=100.0, cache_size=200, class_weight=None, coef0=0.0, degree=3,\n",
-       "  gamma=0.001, kernel='rbf', max_iter=-1, probability=False,\n",
-       "  random_state=None, shrinking=True, tol=0.001, verbose=False)"
+       "SVC(C=100.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma=0.001, kernel='rbf',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# YOUR CODE HERE"
+    "clf.fit(np.asarray(all_data)[training_data], np.asarray(all_target)[training_data])"
    ]
   },
   {
@@ -206,32 +189,261 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([10]), 10)"
+       "(array([ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  9,  1,  1,  1,  1,  1,  1,\n",
+       "         1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
+       "         2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  3,  3,  3,  3,  3,  3,\n",
+       "         3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  4,  4,  4,  4,\n",
+       "         4,  4,  4,  4,  4,  4,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,\n",
+       "         5,  5,  5,  5,  5,  5,  5,  5,  9,  9,  9,  5,  5,  5,  5,  6,  6,\n",
+       "         6,  6,  6,  6,  6,  6,  6,  6,  7,  7,  7,  7,  7,  7,  7,  7,  7,\n",
+       "         7,  7,  7,  7,  7,  7,  7,  7,  7,  7,  7,  8,  8,  8,  8,  8,  8,\n",
+       "         8,  8,  8,  8,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,\n",
+       "         9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,\n",
+       "        10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10,\n",
+       "        10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10,\n",
+       "        10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10]),\n",
+       " [0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  1,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  2,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  3,\n",
+       "  4,\n",
+       "  4,\n",
+       "  4,\n",
+       "  4,\n",
+       "  4,\n",
+       "  4,\n",
+       "  4,\n",
+       "  4,\n",
+       "  4,\n",
+       "  4,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  5,\n",
+       "  6,\n",
+       "  6,\n",
+       "  6,\n",
+       "  6,\n",
+       "  6,\n",
+       "  6,\n",
+       "  6,\n",
+       "  6,\n",
+       "  6,\n",
+       "  6,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  7,\n",
+       "  8,\n",
+       "  8,\n",
+       "  8,\n",
+       "  8,\n",
+       "  8,\n",
+       "  8,\n",
+       "  8,\n",
+       "  8,\n",
+       "  8,\n",
+       "  8,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  9,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10,\n",
+       "  10])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf.predict(all_data[-1]), all_target[-1]"
+    "clf.predict(all_data[:-1]), all_target[:-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def evaluate(expected, predicted):\n",
@@ -242,10 +454,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -254,40 +464,42 @@
       "Classification report:\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00         5\n",
-      "          1       1.00      1.00      1.00         7\n",
-      "          2       1.00      1.00      1.00        15\n",
-      "          3       1.00      1.00      1.00         5\n",
-      "          4       1.00      1.00      1.00        20\n",
-      "          5       1.00      1.00      1.00         6\n",
-      "          6       1.00      1.00      1.00         8\n",
-      "          7       1.00      1.00      1.00         7\n",
-      "          8       1.00      1.00      1.00        18\n",
-      "          9       1.00      1.00      1.00         8\n",
-      "         10       1.00      1.00      1.00        41\n",
+      "          0       1.00      0.83      0.91         6\n",
+      "          1       1.00      1.00      1.00        18\n",
+      "          2       1.00      1.00      1.00         7\n",
+      "          3       1.00      1.00      1.00         9\n",
+      "          4       1.00      1.00      1.00         6\n",
+      "          5       1.00      1.00      1.00        14\n",
+      "          6       1.00      1.00      1.00         7\n",
+      "          7       1.00      1.00      1.00        17\n",
+      "          8       1.00      1.00      1.00        10\n",
+      "          9       0.96      1.00      0.98        22\n",
+      "         10       1.00      1.00      1.00        39\n",
       "\n",
-      "avg / total       1.00      1.00      1.00       140\n",
+      "avg / total       0.99      0.99      0.99       155\n",
       "\n",
       "\n",
       "Confusion matrix:\n",
-      "[[ 5  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  7  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0 15  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  5  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0 20  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  6  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  8  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  7  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0 18  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  8  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0 41]]\n"
+      "[[ 5  0  0  0  0  0  0  0  0  1  0]\n",
+      " [ 0 18  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  7  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  9  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  6  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0 14  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  7  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0 17  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0 10  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0 22  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0 39]]\n"
      ]
     }
    ],
    "source": [
     "expected = []\n",
     "predicted = []\n",
-    "# YOUR CODE HERE\n",
+    "\n",
+    "expected = np.asarray(all_target)[training_data]\n",
+    "predicted = clf.predict(np.asarray(all_data)[training_data])\n",
     "\n",
     "evaluate(expected, predicted)"
    ]
@@ -301,10 +513,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -314,39 +524,42 @@
       "             precision    recall  f1-score   support\n",
       "\n",
       "          0       1.00      1.00      1.00         5\n",
-      "          1       1.00      1.00      1.00         3\n",
-      "          2       1.00      1.00      1.00         5\n",
-      "          3       1.00      1.00      1.00         5\n",
-      "          4       0.91      1.00      0.95        10\n",
-      "          5       1.00      1.00      1.00         4\n",
-      "          6       1.00      1.00      1.00         2\n",
-      "          7       1.00      0.75      0.86         4\n",
-      "          8       1.00      1.00      1.00         8\n",
-      "          9       1.00      1.00      1.00         3\n",
-      "         10       1.00      1.00      1.00        11\n",
+      "          1       1.00      1.00      1.00         5\n",
+      "          2       1.00      1.00      1.00         4\n",
+      "          3       1.00      1.00      1.00        10\n",
+      "          4       1.00      1.00      1.00         4\n",
+      "          5       1.00      0.75      0.86        12\n",
+      "          6       1.00      1.00      1.00         3\n",
+      "          7       1.00      1.00      1.00         3\n",
+      "          9       0.73      1.00      0.84         8\n",
+      "         10       1.00      1.00      1.00        13\n",
       "\n",
-      "avg / total       0.98      0.98      0.98        60\n",
+      "avg / total       0.97      0.96      0.96        67\n",
       "\n",
       "\n",
       "Confusion matrix:\n",
-      "[[ 5  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  3  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  5  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  5  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0 10  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  4  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  2  0  0  0  0]\n",
-      " [ 0  0  0  0  1  0  0  3  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  8  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  3  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0 11]]\n"
+      "[[ 5  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  5  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  4  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0 10  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  4  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  9  0  0  3  0]\n",
+      " [ 0  0  0  0  0  0  3  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  3  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  8  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0 13]]\n"
      ]
     }
    ],
    "source": [
     "expected = []\n",
     "predicted = []\n",
-    "# YOUR CODE HERE\n",
+    "\n",
+    "#take other data (everything except training data)\n",
+    "eval_data = permutation[n_training_data:]\n",
+    "\n",
+    "expected = np.asarray(all_target)[eval_data]\n",
+    "predicted = clf.predict(np.asarray(all_data)[eval_data])\n",
     "\n",
     "evaluate(expected, predicted)"
    ]
@@ -362,10 +575,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -382,33 +593,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([10]), 10)"
+       "(array([10]), [10])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "clf2 = pickle.load(open(ROBOT_POSE_CLF))\n",
-    "clf2.predict(all_data[-1]), all_target[-1]"
+    "clf2.predict(all_data[-1:]), all_target[-1:]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -437,5 +651,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
