--- a/joint_control/learn_posture.ipynb
+++ b/joint_control/learn_posture.ipynb
@@ -189,249 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  9,  1,  1,  1,  1,  1,  1,\n",
-       "         1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
-       "         2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  3,  3,  3,  3,  3,  3,\n",
-       "         3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  4,  4,  4,  4,\n",
-       "         4,  4,  4,  4,  4,  4,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,\n",
-       "         5,  5,  5,  5,  5,  5,  5,  5,  9,  9,  9,  5,  5,  5,  5,  6,  6,\n",
-       "         6,  6,  6,  6,  6,  6,  6,  6,  7,  7,  7,  7,  7,  7,  7,  7,  7,\n",
-       "         7,  7,  7,  7,  7,  7,  7,  7,  7,  7,  7,  8,  8,  8,  8,  8,  8,\n",
-       "         8,  8,  8,  8,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,\n",
-       "         9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,\n",
-       "        10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10,\n",
-       "        10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10,\n",
-       "        10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10]),\n",
-       " [0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  2,\n",
-       "  2,\n",
-       "  2,\n",
-       "  2,\n",
-       "  2,\n",
-       "  2,\n",
-       "  2,\n",
-       "  2,\n",
-       "  2,\n",
-       "  2,\n",
-       "  2,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  3,\n",
-       "  4,\n",
-       "  4,\n",
-       "  4,\n",
-       "  4,\n",
-       "  4,\n",
-       "  4,\n",
-       "  4,\n",
-       "  4,\n",
-       "  4,\n",
-       "  4,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  5,\n",
-       "  6,\n",
-       "  6,\n",
-       "  6,\n",
-       "  6,\n",
-       "  6,\n",
-       "  6,\n",
-       "  6,\n",
-       "  6,\n",
-       "  6,\n",
-       "  6,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  7,\n",
-       "  8,\n",
-       "  8,\n",
-       "  8,\n",
-       "  8,\n",
-       "  8,\n",
-       "  8,\n",
-       "  8,\n",
-       "  8,\n",
-       "  8,\n",
-       "  8,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  9,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10,\n",
-       "  10])"
+       "(array([10]), [10])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
